--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                 <h1>MEET MUHAMMAD TAQI </h1>
                 <span>EXPERT WEBDEVELOPER</span>
             </div>
-            <div class="img"></div>
+            <div class="img"><img src="images/mysecond.png" alt=""></div>
         </div>
         </div>
 
 
         <div class="last-div">
-            <div class="box box1"> <h1>HELLOW !</h1></div>
-            <div class="box box2"><h1>WELCOME :</h1></div>
+            <div class="box box1"> <h1>HELLOW !</h1> <img src="images/my.png" alt=""></div>
+            <div class="box box2"><h1>WELCOME :</h1> <img src="images/my.png" alt=""></div>
         </div>
   <div class="test">
     <div class="test-box"><h1>FIRST Experience</h1>
